--- a/ejercicio_30.html
+++ b/ejercicio_30.html
@@ -12,19 +12,16 @@
     <link rel="icon" sizes="64x64" href="./assets/icons/real-betis-logo-1.png">
 </head>
 <body>
-    <div id="principal">
-        <h1>Página principal.</h1>
-        <p>
-            <a href="#noticias">Noticias</a>
-        </p>
-    </div>
+    <title>Contacto</title>
 
-    <div id="noticias">
-        <h1>Noticias.</h1>
-        <p>
-            <a href="#principal">Salir.</a>
-        </p>
-    </div>
+    <h1>Contacto</h1>
     
+    <p>
+        <a href="mail:cogasur2008sl@alumnos.alborfp.com">Enviar mail</a>
+    </p>
+
+    <p>
+        mail:cogasur2008sl@alumnos.alborfp.com
+    </p>
 </body>
 </html>
