--- a/ejercicio_34.html
+++ b/ejercicio_34.html
@@ -12,19 +12,25 @@
     <link rel="icon" sizes="64x64" href="./assets/icons/real-betis-logo-1.png">
 </head>
 <body>
-    <div id="principal">
-        <h1>Página principal.</h1>
-        <p>
-            <a href="#noticias">Noticias</a>
-        </p>
-    </div>
+<h1>All the different list types for ul with CSS</h1>
 
-    <div id="noticias">
-        <h1>Noticias.</h1>
-        <p>
-            <a href="#principal">Salir.</a>
-        </p>
-    </div>
-    
+    <ul class="circle-list">
+        <li>Coffee</li>
+        <li>Tea</li>
+        <li>Milk</li>
+    </ul>
+
+    <ul class="disc-list">
+        <li>Coffee</li>
+        <li>Tea</li>
+        <li>Milk</li>
+    </ul>
+
+    <ul class="square-list">
+        <li>Coffee</li>
+        <li>Tea</li>
+        <li>Milk</li>
+    </ul>
+
 </body>
 </html>
