--- a/ejrcicio_32.html
+++ b/ejrcicio_32.html
@@ -12,19 +12,36 @@
     <link rel="icon" sizes="64x64" href="./assets/icons/real-betis-logo-1.png">
 </head>
 <body>
-    <div id="principal">
-        <h1>Página principal.</h1>
-        <p>
-            <a href="#noticias">Noticias</a>
-        </p>
-    </div>
+    <h1>Mis cosas favoritas</h1>
+    <ol>
+        <li>Dar clase</li>
+        <li>Croquetas</li>
+        <li>Los chikos del maiz</li>
+    </ol>
 
-    <div id="noticias">
-        <h1>Noticias.</h1>
-        <p>
-            <a href="#principal">Salir.</a>
-        </p>
-    </div>
+    <br>
+
+    <h1>No me gusta</h1>
+    <ul>
+        <li>Los lunes</li>
+        <li>Que alguien llegue tarde</li>
+        <li>El capitalismo</li>
+    </ul>
+
+    <br>
+
+    <h1>Definiciones</h1>
     
+    
+        Guitarra
+        Instrumento de cuerdas
+        Varios tipos: eléctrica, acústica y española
+        <br>
+       <p>Croquetas
+        Plato muy rico
+        Contiene bechamel
+        Puede ser de muchos tipos
+        No se dice cooreta</p> 
+
 </body>
 </html>
